# swig-test

./: .gitignore  CMakeLists.txt  README.md  native_code.c  native_code.h
csharp/: native_code.i
sample/csharp/: SwigTestSample.cs
scripts/: build.sh  gen_binding.sh  generate_binding.sh
swig/csharp/: native_code.i
